trunk/Archive2/38/4ac780c1e64c23/output
main.cpp:10:1: error: C++ requires a type specifier for all declarations
RegisterMessageType<Message1>();
^~~~~~~~~~~~~~~~~~~
main.cpp:10:1: error: template specialization requires 'template<>'
RegisterMessageType<Message1>();
^                  ~~~~~~~~~~
template<> 
main.cpp:10:1: error: no function template matches function template specialization 'RegisterMessageType'
main.cpp:5:28: note: candidate template ignored: could not match 'void ()' against 'int ()'
template<class MSG_T> void RegisterMessageType() {
                           ^
3 errors generated.
